--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,6 @@
-spring.datasource.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
-server.error.whitelabel.enabled=false
-spring.mvc.throw-exception-if-no-handler-found=true
+
 #This line below will cause that no webjar is found
 #spring.resources.add-mappings=false
-
-
-#server.error.include-stacktrace=always
+server.port=9000
+spring.data.mongodb.port=27017
+spring.data.mongodb.host=localhost
